# AT82.05-Claim-Contradiction-Over-Knowledge-Graphs

./: .gitignore  OLD_README.md  README.md  extraction_debug_notes.md  model_comparison.md  project.code-workspace
app/: docker-compose.yml
app/backend/: .env.example  cascade.py  config.py  extraction.py  main.py  neo4j_store.py  nli_scorer.py  pyproject.toml  triples.py  vector.py
app/frontend/: package-lock.json  package.json  vite.config.ts
app/frontend/src/routes/: +page.svelte  layout.css
experiments/: 00_load_ContraDoc.ipynb  01_EDA_ContraDoc.ipynb  02_triples_extraction_ContraDoc.ipynb  02b_triples_extraction_minie_style.ipynb  03_insert_to_neo4j_ContraDoc.ipynb  04_structural_filtering_ContraDoc.ipynb  05_vector_similarity_ContraDoc.ipynb  06_NLI_ContraDoc.ipynb  06_NLI_data_ContraDoc.ipynb  06_NLI_finetune_ContraDoc.ipynb  07_LLM_ContraDoc.ipynb  07_NLI_ablation_ContraDoc.ipynb  08_LLM_ablation_ContraDoc.ipynb  08_baseline_LLM_ContraDoc.ipynb  09_error_analysis_ContraDoc.ipynb  config.py  docker-compose.yml  extract_kg_triples.ipynb  load_FCIT.ipynb  load_triples_to_neo4j.ipynb  nli_finetune_data.ipynb  pyproject.toml
experiments/data/processed/ContraDoc/: ablation_07_summary.json  ablation_master_summary.json  balanced_sample.json  baseline_predictions.jsonl  chunk_candidates.jsonl  error_samples_fn.md  error_samples_fp.md  findability.json  llm_cascade_haiku.jsonl  llm_cascade_sonnet.jsonl  llm_judgments.jsonl  llm_text_dump.jsonl  llm_usage_log.jsonl  llm_vector_sonnet.jsonl  nli_predictions.jsonl  structural_candidates.jsonl  triples.jsonl  triples_minie.jsonl  triples_minie_low_effort.jsonl  triples_minie_unusable.json  triples_minie_usage.jsonl
experiments/data/processed/ContraDoc/nli/: nli_splits.json  nli_test.csv  nli_train.csv  nli_val.csv
experiments/data/processed/finding_contradictions_in_text_2008/: RealContra.csv  contradiction_binary.csv  entailment_3ways_test.csv  entailment_3ways_train.csv  real_contradiction.csv
experiments/data/processed/kg_triples/: binary_no_extraction.jsonl  closed_schema.jsonl  open_extraction.jsonl
experiments/fine-tuning/models/nli_binary/: config.json  model.safetensors  tokenizer_config.json
experiments/itext2kg_trial/: compare.py  extract.py  minie_schema_sketch.py  pyproject.toml  smoke.py  smoke_output.json  triples_v2.jsonl
experiments/legacy/: 00_load_RealContra.ipynb  01_combine_types.ipynb  ablation_retrieval.ipynb  extract_kg_triples.ipynb
experiments/legacy/data/processed_finding_contradictions_in_text_2008/: contradiction_binary.csv  entailment_3ways_train.csv
experiments/legacy/data/processed_kg_triples/: binary_no_extraction_pruned.jsonl  closed_schema_pruned.jsonl  open_extraction.jsonl  open_extraction_pruned.jsonl
experiments/legacy/fine-tuning/: 01_NLI_binary_finetune.ipynb  09_baseline_NLI_flat_ContraDoc.ipynb
experiments/utils/: __init__.py  contradoc.py  llm.py  text.py
