[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.95.0",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.1.13",
    "loguru>=0.7.3",
    "lxml>=6.0.4",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]

[project.optional-dependencies]
"cpu" = ["torch>=2.10.1", "torchvision>=0.25.0"]
"gpu" = ["torch>=2.10.1", "torchvision>=0.25.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["experiments"]

[tool.ruff]
line-length = 144
