[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.97.0",
    "datasets>=4.8.4",
    "ftfy>=6.3.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.2.1",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "neo4j>=6.1.0",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]

[dependency-groups]
gpu = ["torch>=2.11", "torchvision>=0.26"]
cpu = ["torch>=2.11", "torchvision>=0.26"]

[tool.uv]
conflicts = [[{ group = "cpu" }, { group = "gpu" }]]
default-groups = ["gpu"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu130", group = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu130", group = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["experiments"]

[tool.ruff]
line-length = 144
