[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.1.13",
    "neo4j>=6.1.0",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
    "loguru>=0.7.0",
]
