[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.1.0",
    "anthropic>=0.97.0",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.1.13",
    "loguru>=0.7.0",
    "neo4j>=6.1.0",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.4.1",
    "transformers>=5.6.2",
    "uvicorn>=0.44.0",
]

[dependency-groups]
gpu = ["torch>=2.11", "torchvision>=0.26"]
cpu = ["torch>=2.11", "torchvision>=0.26"]

[tool.uv]
conflicts = [[{ group = "cpu" }, { group = "gpu" }]]
default-groups = ["gpu"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu130", group = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu130", group = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
